--- a/myplugin/protocols.conf
+++ b/myplugin/protocols.conf
@@ -4,4 +4,9 @@ Protocols SPA = [
 		{"tag": "protocol_group", "text": "Greetings", "openItem": "False", "children": [
 		    {"tag": "protocol", "value": "MyPluginPrefixHelloWorld", "text": "Hello world"}
         ]}
+	]},
+	{"tag": "section", "text": "3D", "openItem": "False", "children": [
+		{"tag": "protocol_group", "text": "Preprocessing", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "MyPluginFilterVolume", "text": "volume filter"}
+        ]}
 	]}]
