--- a/myplugin/protocols.conf
+++ b/myplugin/protocols.conf
@@ -6,7 +6,8 @@ Protocols SPA = [
         ]}
 	]},
 	{"tag": "section", "text": "3D", "openItem": "False", "children": [
-		{"tag": "protocol_group", "text": "Preprocessing", "openItem": "False", "children": [
-		    {"tag": "protocol", "value": "MyPluginFilterVolume", "text": "volume filter"}
+		{"tag": "protocol_group", "text": "Preprocess", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "MyPluginFilterVolume", "text": "default"},
+		    {"tag": "protocol", "value": "MyPluginSubtractVolume", "text": "default"}
         ]}
 	]}]
