--- a/myplugin/protocols.conf
+++ b/myplugin/protocols.conf
@@ -1,7 +1,7 @@
 [PROTOCOLS]
-Tomography = [
-	{"tag": "section", "text": "PracticeDay1", "openItem": "False", "children": [
-		{"tag": "protocol_group", "text": "MyGroup", "openItem": "False", "children": [
-		    {"tag": "protocol", "value": "MyPluginPrefixHelloWorld", "text": "My first protocol"}
+Protocols SPA = [
+	{"tag": "section", "text": "Tools", "openItem": "False", "children": [
+		{"tag": "protocol_group", "text": "Greetings", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "MyPluginPrefixHelloWorld", "text": "Hello world"}
         ]}
 	]}]
