Update protocol list in protocols.conf

--- a/myplugin/protocols.conf
+++ b/myplugin/protocols.conf
@@ -1,5 +1,5 @@
 [PROTOCOLS]
-Tomography = [
+Practice1 = [
 	{"tag": "section", "text": "PracticeDay1", "openItem": "False", "children": [
 		{"tag": "protocol_group", "text": "MyGroup", "openItem": "False", "children": [
 		    {"tag": "protocol", "value": "MyPluginPrefixHelloWorld", "text": "My first protocol"}
