protocol to test step executors

--- a/myplugin/protocols.conf
+++ b/myplugin/protocols.conf
@@ -1,7 +1,7 @@
 [PROTOCOLS]
 Protocols SPA = [
 	{"tag": "section", "text": "Tools", "openItem": "False", "children": [
-		{"tag": "protocol_group", "text": "Greetings", "openItem": "False", "children": [
-		    {"tag": "protocol", "value": "MyPluginPrefixHelloWorld", "text": "Hello world"}
+		{"tag": "protocol_group", "text": "DEV TOOLS", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "ProtStepsExecutor", "text": "default"}
         ]}
 	]}]
